--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
+    "react-youtube": "^10.1.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
